[package]
name = "modvlo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = {version = "0.25", features =["derive"]}
serde_json = "1.0"
serde = {version = "1.0", features =["derive"]}
anyhow = "1.0"
image = "0.24"
tokio = {version="1.17", features=["macros", "rt-multi-thread","full"]}
#hex = "0.4"
#shvft_mapper = {path = "../shvft_mapper"}